# rick-ipmi-oem

./: .clang-format  CMakeLists.txt  CMakeLists.txt.in  cmake-format.json  meson.build  rick-ipmi-oem_git.bb
include/: oemcommands.hpp
src/: oemcommands.cpp
